fix: menu style on mobile + desktop

--- a/css/Style.css
+++ b/css/Style.css
@@ -13,6 +13,9 @@
 
 }
 
+
+
+
 .loader {
     position: fixed;
     top: 0;
@@ -123,17 +126,11 @@ nav {
     width: 100%;
     background-color: lightgrey;
     font-weight: bolder;
-
-}
-
-.SearchBtn i {
-    background-color: transparent;
-}
-
-
-.SearchInput .SearchBtn:hover,
-.SearchInput .SearchBtn:active {
-    background-color: grey;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    flex-direction: row-reverse;
+    align-items: center;
 
 }
 
@@ -157,8 +154,9 @@ a {
     font-size: smaller;
     padding-top: 20px;
 }
+
 a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
@@ -174,8 +172,9 @@ a {
     box-shadow: 0 0 10px #00000080;
     position: relative;
     transition: all 450ms;
-    min-height: 55px;
-    padding-left: 70px;
+    min-height: 70px;
+    padding-left: 40px;
+    width: 320px;
 
 
 }
@@ -183,7 +182,12 @@ a {
 .FiltersWrapper ul li:hover,
 .FiltersWrapper ul li:active {
     background-color: lavender;
-    transform: scale(1.13);
+}
+
+.FiltersWrapper ul li:hover .step-icon,
+.FiltersWrapper ul li:active .step-icon {
+    color: #9356DC;
+
 }
 
 .FiltersWrapper ul li .numberIcon {
@@ -191,7 +195,7 @@ a {
     padding: 5px;
     justify-content: center;
     position: absolute;
-    left: -20px;
+    left: -15px;
     background: #9356DC;
     color: white;
 }
@@ -317,14 +321,19 @@ label {
 
 }
 
+.wrapper h2 {
+    margin: 0px;
+}
 
 .Rest_Section {
     width: 100%;
-    padding: 20px 40px;
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     align-items: start;
     justify-content: space-between;
+    gap: 40px;
+    padding-bottom: 100px;
 
 
 }
@@ -362,7 +371,6 @@ label {
     box-sizing: border-box;
     box-shadow: 0 0 20px #00000080;
     background-color: transparent;
-    margin: 20px;
     height: 190px;
     display: flex;
     flex-wrap: wrap;
@@ -501,10 +509,12 @@ footer.FooterWrapper {
         flex-direction: column;
 
     }
+
 }
 
 /* Tablet version */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 820px) {
+
 
     body {
         display: flex;
@@ -562,6 +572,15 @@ footer.FooterWrapper {
         display: flex;
         justify-content: center;
         width: 100%;
+
+
+    }
+
+    .FiltersWrapper ul li {
+        padding-right: 2px;
+        padding-left: 20px;
+        min-height: 45px;
+
     }
 
 
